# protosym

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  bumpcheck.sh  checks.sh  noxfile.py  pyproject.toml  quicktest.sh  requirements-all.txt  requirements-docs.txt  requirements-lint.txt  requirements-test.txt
.github/: labels.yml
.github/workflows/: actionsupdate.yml  constraints.txt  labeler.yml  release.yml  tests.yml  updater.yml
benchmarks/: test_differentiation.py
docs/: conf.py  index.rst  reference.rst  requirements.txt
docs/reference/: core_types.rst  index.rst  simplecas.rst
src/protosym/: __init__.py  __main__.py  simplecas.py
src/protosym/core/: __init__.py  atom.py  differentiate.py  evaluate.py  exceptions.py  f64.py  pyexpr.py  sym.py  tree.py
src/protosym/simplecas/: __init__.py  exceptions.py  expr.py  functions.py  lambdification.py  matrix.py  sympy_conversions.py
tests/: __init__.py  test_main.py  test_simplecas.py  utils.py
tests/core/: test_atom.py  test_differentiate.py  test_evaluate.py  test_f64.py  test_pyexpr.py  test_sym.py  test_tree.py
